--- a/index.html
+++ b/index.html
@@ -11,18 +11,15 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150" srcset="">
-        <p class="lead">Eu sou Fernanda_</p>
-        <h1>Eu ensino Programação</h1>
-        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
-            que já desenvolvi!</p>
+        <img src="img/avatar-perfil.png" alt="avatar do Jorge" class="rounded-circle" width="150" height="150" srcset="">
+        <p class="lead">Eu sou o Jorge_</p>
+        <h1>Eu curso programação</h1>
+        <p>Sou Aluno do Yolanda Ascencio, curso programaçao e sou de exatas. Sei o básico dos códigos HTML, CSS e entre outros</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
             <p class="badge bg-secondary">CSS</p>
-            <p class="badge bg-secondary">JavaScript</p>
-            <p class="badge bg-secondary">Scratch</p>
+            
         </div>
     </header>
     <main class="container">
